Write GetRentalsForUser API